--- a/cliente-servidor/index.html
+++ b/cliente-servidor/index.html
@@ -4,6 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Cadastro</title>
+
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+            background: #f2f2f2;
+            padding: 0;
+            margin: 0;
+        }
+        .container{
+            width: 500px;
+            margin: 50px auto;
+            background: #fff;
+            padding: 25px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgb(0, 0, 0, 0.2);
+        }
+        h2{
+            text-align: center;
+            margin-bottom: 20px;
+            color: #333;
+        }
+        label{
+            font-weight: bold;
+            display: block;
+            margin-top: 15px;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -25,8 +52,6 @@
 
             <button type="submit">Enviar</button>
 
-
-            
         </form>
     </div>
 </body>
