recebendo e filtrando dados

--- a/cliente-servidor/index.html
+++ b/cliente-servidor/index.html
@@ -30,6 +30,31 @@
             display: block;
             margin-top: 15px;
         }
+        input, textarea{
+            width: 95%;
+            padding: 10px;
+            margin-top: 5px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        textarea {
+            resize: vertical;
+        }
+        button{
+            margin-top: 20px;
+            width: 100%;
+            padding: 12px;
+            background: #0066cc;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        button:hover{
+            background: #004c99;
+        }
+
     </style>
 </head>
 <body>
